--- a/DOM/second.css
+++ b/DOM/second.css
@@ -9,7 +9,7 @@ body {
 
 #form {
     background-color: #fff;
-    max-width: 500px;
+    max-width: 1000px;
     margin: 20px auto;
     padding: 20px;
     border-radius: 8px;
@@ -49,3 +49,7 @@ input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
+span{
+    font-size: 16px;
+    color: red;
+}
